[package]
name = "comrak_nif"
version = "0.1.0"
authors = ["Leandro Pereira"]
edition = "2021"
rust-version = "1.86.0"

[lib]
name = "comrak_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ammonia = "4.1"
anyhow = "1.0"
autumnus = { version = "0.7.7", features = ["all-languages", "nif_version_2_15", "elixir-nif"] }
# autumnus = { path = "../../../autumnus", features = ["all-languages", "nif_version_2_15", "elixir-nif"] }
# autumnus = { git = "https://github.com/leandrocp/autumnus", features = ["all-languages", "nif_version_2_15", "elixir-nif"] }
comrak = { version = "0.48", features = ["shortcodes"] }
lazy_static = "1.5"
log = "0.4"
lol_html = "2.7"
phf = { version = "0.13", features = ["macros"] }
rustler = "0.37"
serde = "1.0"
shlex = "1.3.0"
typed-arena = "2.0"
v_htmlescape = "0.15"

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
