[package]
name = "comrak_nif"
version = "0.1.0"
authors = ["Leandro Pereira"]
edition = "2021"
rust-version = "1.91"

[lib]
name = "comrak_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ammonia = "4.1"
autumnus = { version = "0.8.0", features = ["all-languages", "nif_version_2_15", "elixir-nif"] }
# autumnus = { git = "https://github.com/leandrocp/autumnus", features = ["all-languages", "nif_version_2_15", "elixir-nif"] }
# comrak = { version = "0.49", features = ["shortcodes", "phoenix_heex"] }
comrak = { git = "https://github.com/kivikakk/comrak", rev = "b3ad5c942e7c6c00751c2e1f21d69d8ba7a5b31a", features = ["shortcodes", "phoenix_heex"] }
lol_html = "2.7"
parking_lot = "0.12"
phf = { version = "0.13", features = ["macros"] }
rustler = "0.37"
serde = "1.0"
shlex = "1.3.0"
typed-arena = "2.0"
v_htmlescape = "0.15"

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
